--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -8,10 +8,9 @@
 		<li>
 			<a href="#">About</a>
 			<ul class="dl-submenu">
-				<li><a href="https://www.v2ex.com/member/{{ site.owner.v2ex }}"><i class="fa fa-coffee"></i> V2EX </a></li>
-				<li><a href="http://www.zhihu.com/people/{{ site.owner.zhihu }}"><i class="fa fa-anchor"></i> Zhihu </a></li>
+				<li><a href="https://www.github.com/{{ site.owner.v2ex }}"><i class="fa fa-coffee"></i> GitHub </a></li>
+				<li><a href="http://www.twitter.com/{{ site.owner.zhihu }}"><i class="fa fa-anchor"></i> Twitter </a></li>
 				<li><a href="http://www.weibo.com/{{ site.owner.weibo }}/profile"><i class="fa fa-weibo"></i> Weibo </a></li>
-				<li><a href="http://www.douban.com/people/{{ site.owner.douban }}"><i class="fa fa-book"></i> Douban </a></li>
 			</ul><!-- /.dl-submenu -->
 		</li>
 		<li><a href="https://gist.github.com/{{ site.owner.github }}"> Gist </a></li>
