--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -8,9 +8,9 @@
 		<li>
 			<a href="#">About</a>
 			<ul class="dl-submenu">
-				<li><a href="https://www.github.com/{{ site.owner.v2ex }}"><i class="fa fa-coffee"></i> GitHub </a></li>
-				<li><a href="http://www.twitter.com/{{ site.owner.zhihu }}"><i class="fa fa-anchor"></i> Twitter </a></li>
-				<li><a href="http://www.weibo.com/{{ site.owner.weibo }}/profile"><i class="fa fa-weibo"></i> Weibo </a></li>
+				<li><a href="https://www.github.com/iusn{{ site.owner.v2ex }}"><i class="fa fa-coffee"></i> GitHub </a></li>
+				<li><a href="http://www.twitter.com/NeroSun{{ site.owner.zhihu }}"><i class="fa fa-anchor"></i> Twitter </a></li>
+				<li><a href="http://www.weibo.com/979491586/{{ site.owner.weibo }}/profile"><i class="fa fa-weibo"></i> Weibo </a></li>
 			</ul><!-- /.dl-submenu -->
 		</li>
 		<li><a href="https://gist.github.com/{{ site.owner.github }}"> Gist </a></li>
